[tool.poetry]
name = "boilerplate-fastapi"
version = "0.1.0"
description = "Boilerplate FastAPI"
authors = ["seaflux.tech"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
SQLAlchemy = "^2.0.3"
PyMySQL = "^1.0.2"
fastapi = "^0.92.0"
python-dotenv = "^0.21.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.0.1"
cryptography = "^39.0.0"
Jinja2 = "^3.1.2"
python-i18n = "^0.3.9"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
